--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Is there food in the newsroom?</title>
     
     <style>
-      body { background-color: #2ca25f; }
+      body { background-color: #2ca25f; font-family: Helvetica, Arial, sans-serif; }
+      .centered { height:40px; margin: auto; position: absolute; top: 0; left: 0; bottom: 0; right: 0; }
     </style>
 
 <!--
@@ -19,6 +20,12 @@
   </head>
 
   <body>
+  
+  <div class="centered">
+    <h1>
+      Yes.
+    </h1>
+  </div>
  
  
   </body>
