--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     
     <style>
       body { background-color: #2ca25f; font-family: Helvetica, Arial, sans-serif; }
-      .centered { height:40px; margin: auto; position: absolute; top: 0; left: 0; bottom: 0; right: 0; }
+      .centered { height:40px; width: 100%; margin: auto; position: absolute; top: 0; left: 0; bottom: 0; right: 0; }
+      h1 { font-size:6em; }
     </style>
 
 <!--
