--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Is there food in the newsroom?</title>
     
     <style>
-      body { background-color: #2ca25f; font-family: Helvetica, Arial, sans-serif; }
+      body { margin: 0; padding: 0; height: 100%; background-color: #2ca25f; font-family: Helvetica, Arial, sans-serif; }
       .centered { height:40px; width: 100%; margin: auto; position: absolute; top: 0; left: 0; bottom: 0; right: 0; }
       h1 { font-size:6em; }
     </style>
