--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    
     <title>Is there food in the newsroom?</title>
     
     <style>
@@ -11,13 +13,10 @@
       h1 { font-size:6em; }
     </style>
 
-<!--
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> -->
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
   </head>
 
   <body>
@@ -27,7 +26,6 @@
       Yes.
     </h1>
   </div>
- 
  
   </body>
 </html>
