--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     
     <title>Is there food in the newsroom?</title>
-    
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <style>
       body { margin: 0; padding: 0; height: 100%; background-color: #2ca25f; font-family: Helvetica, Arial, sans-serif; }
       .centered { background: inherit; bottom: 0; height: 200px; left: 0; margin: auto; position: absolute; top: 0; right: 0; width: 100px; }
       h1 { font-size:6em; color:#fff;}
+      .bars { }
     </style>
 
     <!--[if lt IE 9]>
