--- a/index.html
+++ b/index.html
@@ -1,32 +1,73 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    
-    <title>Is there food in the newsroom?</title>
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
     <style>
-      body { margin: 0; padding: 0; height: 100%; background-color: #2ca25f; font-family: Helvetica, Arial, sans-serif; }
-      .centered { background: inherit; bottom: 0; height: 200px; left: 0; margin: auto; position: absolute; top: 0; right: 0; width: 100px; }
-      h1 { font-size:6em; color:#fff;}
-      .bars { }
+        body { padding-top: 90px; background-color: #e34a33; }
     </style>
 
+    <title>Is there food in the newsroom?</title>
+
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+<![endif]-->
 
-  </head>
+</head>
 
-  <body>
-  
-  <div class="centered">
-    <h1>
-      Yes.
-    </h1>
-  </div>
- 
-  </body>
+<body>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <ul class="nav navbar-nav">
+            <li><a href="https://docs.google.com/spreadsheet/ccc?key=0Ag4MM37uq7FmdEJ4OFlNR01qejY5d21pR09xZWx4RWc&usp=sharing">Add or delete an entry</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div style="color:white;" class="col-md-12 text-center" id="answer">
+        <h1 id="hed" style="font-size:10em; font-weight:900;">No.</h1>
+        <div id="food"></div>
+    </div>
+
+    <script>
+        function displayContent(json) {
+            if (json.feed.entry && json.feed.entry.length) {
+                $('body').css('background-color', '#2ca25f');
+                $('#hed').html('Yes.')
+                var len = json.feed.entry.length;
+                var list_content = '';
+                for (var i = 0; i < len; i++) {
+                    var where = json.feed.entry[i].gsx$where.$t.toLowerCase();
+                    var what = json.feed.entry[i].gsx$what.$t.toLowerCase();
+                    list_content += [
+                        '<h1>' + what + ' <i class="fa fa-arrow-right"></i> ' + where + '</h1>'
+                    ].join('');
+
+                    document.getElementById('food').innerHTML = list_content
+                }
+
+            } else {
+                $('body').css('background-color', '#e34a33');
+                $('#hed').html('No.')
+            }
+
+        }
+    </script>
+
+    <script src="http://spreadsheets.google.com/feeds/list/0Ag4MM37uq7FmdEJ4OFlNR01qejY5d21pR09xZWx4RWc/od6/public/values?alt=json-in-script&amp;callback=displayContent" type="text/javascript"></script>
+
+</body>
+
 </html>
