--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <style>
-        body { padding-top: 90px; background-color: #e34a33; }
+        body { padding-top: 90px; }
     </style>
 
     <title>Is there food in the newsroom?</title>
@@ -31,7 +31,7 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <ul class="nav navbar-nav">
-            <li><a href="https://docs.google.com/spreadsheet/ccc?key=0Ag4MM37uq7FmdEJ4OFlNR01qejY5d21pR09xZWx4RWc&usp=sharing">Add or delete an entry</a>
+            <li><a href="https://docs.google.com/spreadsheet/ccc?key=0Ag4MM37uq7FmdEJ4OFlNR01qejY5d21pR09xZWx4RWc&usp=sharing" target="_blank">Add or delete an entry</a>
             </li>
         </ul>
     </nav>
