--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
      <div class="modal-body">
-     <p>Is there food in the newsroom? Is once-available food now gone? <a href="https://docs.google.com/spreadsheet/ccc?key=0Ag4MM37uq7FmdEJ4OFlNR01qejY5d21pR09xZWx4RWc&usp=sharing" target="_blank">Update the list accordingly.</a>
+     <p>Is there food in the newsroom? Is once-available food now gone? <a href="https://docs.google.com/spreadsheet/ccc?key=0Ag4MM37uq7FmdEJ4OFlNR01qejY5d21pR09xZWx4RWc&usp=sharing" target="_blank">Update the list!</a>
      </p>
       </div>
       <div class="modal-footer">
