--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
     </button>
     <a class="navbar-brand" href="#">Is there food in the newsroom?</a>
   </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right"style="margin-right:0;">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">    
+    <ul class="nav navbar-nav navbar-right"style="margin-right:0;">
       <li><a href="#" data-toggle="modal" data-target="#wut">Instructions</a></li>
+    </ul>
+        <ul class="nav navbar-nav">
+      <li><a href="#"><em>A Jeff Robb joint</em></a></li>
     </ul>
         </div>
     </nav>
