--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <li><a href="#" data-toggle="modal" data-target="#wut">Instructions</a></li>
     </ul>
         <ul class="nav navbar-nav">
-      <li><a href="#"><em>A Jeff Robb joint</em></a></li>
+      <li><a href="#"><em>A Team Sarpy joint</em></a></li>
     </ul>
         </div>
     </nav>
