--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div style="color:white;" class="container text-center" id="answer">
         <h1 id="hed" style="font-size:10em; font-weight:900;"></h1>
         <div id="fooddiv">
-          <button class="btn btn-mini btn-default" id="sorter">Oldest first</button>
+          <button class="btn btn-mini btn-default" id="sorter">Newest first</button>
         <div id="food"></div>
         </div>
     </div>
@@ -98,7 +98,7 @@
 
 var minutes = '';
     
-function toAp(num){if(typeof(num)!="string"){numstripped=parseInt(num)}else{numstring=num.replace(/,|$|€|¥|%|(|)/g,'');numstripped=parseInt(numstring)};if(numstripped<10){var apnums=["zero","one","two","three","four","five","six","seven","eight","nine"];return apnums[numstripped]}else if(numstripped>999999){var striplength=numstripped.toString().length;if(striplength>=7&&striplength<=9){return((numstripped/1000000).toFixed(2)+' million').replace('.00','')}if(striplength>=10&&striplength<=12){return((numstripped/1000000000).toFixed(2)+' billion').replace('.00','')}if(striplength>=13&&striplength<=15){return((numstripped/1000000000000).toFixed(2)+' trillion').replace('.00','')}}else if(999>numstripped<999999){numstripped+='';x=numstripped.split('.');x1=x[0];x2=x.length>1?'.'+x[1]:'';var rgx=/(\d+)(\d{3})/;while(rgx.test(x1)){x1=x1.replace(rgx,'$1'+','+'$2')}return x1+x2}else{return numstripped}}
+function toAp(num){if(typeof(num)!="string"){numstripped=parseInt(num)}else{numstring=num.replace(/,|$|ï¿½|ï¿½|%|(|)/g,'');numstripped=parseInt(numstring)};if(numstripped<10){var apnums=["zero","one","two","three","four","five","six","seven","eight","nine"];return apnums[numstripped]}else if(numstripped>999999){var striplength=numstripped.toString().length;if(striplength>=7&&striplength<=9){return((numstripped/1000000).toFixed(2)+' million').replace('.00','')}if(striplength>=10&&striplength<=12){return((numstripped/1000000000).toFixed(2)+' billion').replace('.00','')}if(striplength>=13&&striplength<=15){return((numstripped/1000000000000).toFixed(2)+' trillion').replace('.00','')}}else if(999>numstripped<999999){numstripped+='';x=numstripped.split('.');x1=x[0];x2=x.length>1?'.'+x[1]:'';var rgx=/(\d+)(\d{3})/;while(rgx.test(x1)){x1=x1.replace(rgx,'$1'+','+'$2')}return x1+x2}else{return numstripped}}
     
 function minDiff(e) {
   var then = new Date(e);
