--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 var minutes = '';
 var days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
 var hour = '';
-var suffix = ''
+var suffix = '';
     
         function displayContent(json) {
             if (json.feed.entry && json.feed.entry.length) {
