--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <style>
-        body { padding-top: 90px; background-color: #e34a33; }
+        body { padding-top: 90px; }
     </style>
 
     <title>Is there food in the newsroom?</title>
