dumb, dumb michael

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ var days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'S
                         '<h3 class="listitem" data-date="' + when + '">' + what + ' <i class="fa fa-arrow-circle-right"></i> ' + where + '<br/><small>spotted ' + days[weekday] + ' at ' + time + '</small></h3>'
                     ].join('');
 
-                    document.getElementById('food').innerHTML = '<ul class="list-group">' + list_content
+                    document.getElementById('food').innerHTML = list_content
                 }
 
             } else {
